--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="head-nav">
-    <img src="{{ assets('images/') }}" alt="logo">
+    <img src="{{ asset('build/images/logos/Snowtricks-logo.png') }}" alt="logo">
     <ul class="head-list">
         <li>Home</li>
         <li>Tricks</li>
