--- a/assets/sass/layouts/navbar.scss
+++ b/assets/sass/layouts/navbar.scss
@@ -1,10 +1,13 @@
 .head-nav {
   height: 100px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20px
 }
 
 .head-list {
   display: flex;
-  justify-content: end;
+  align-items: center;
   padding: 0;
 
   li {
