--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,5 +1,6 @@
-@import url('fonts/fonts.scss');
-@import url('layouts/header.scss');
+@import "fonts";
+@import "layouts/navbar";
+@import "layouts/header";
 
 body {
   margin: 0;
