--- a/assets/sass/layouts/navbar.scss
+++ b/assets/sass/layouts/navbar.scss
@@ -2,7 +2,8 @@
   height: 100px;
   display: flex;
   justify-content: space-between;
-  margin: 0 20px
+  margin: 0 30px;
+  font-family: norwester, serif;
 }
 
 .head-list {
@@ -12,7 +13,7 @@
 
   li {
     list-style-type: none;
-    margin: 0 5px;
+    margin: 0 15px;
   }
 }
 
