Add page background and title

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
     </head>
     <body>
         {% include 'partials/navbar.html.twig' %}
+        {% include 'partials/header.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
