--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,3 +1,8 @@
 <header class="masthead">
-
+    <h1 id="header-title">
+        <span class="split-title">Dive</span>
+        <span class="split-title">into the world</span>
+        <span class="split-title">of</span>
+        <span class="split-title">extreme snowboarding</span>
+    </h1>
 </header>
