--- a/assets/sass/layouts/header.scss
+++ b/assets/sass/layouts/header.scss
@@ -11,13 +11,22 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-size: 3em;
   }
-}
 
-.split-title {
-  display: block;
-  width: 100%;
-  text-align: center;
+  .split-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+
+  .header-arrow {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    color: #FFFF;
+    font-size: 2em;
+  }
 }
 
 @keyframes fade-in {
