--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -5,4 +5,5 @@
         <span class="split-title">of</span>
         <span class="split-title">extreme snowboarding</span>
     </h1>
+    <i class="fa-solid fa-arrow-down header-arrow"></i>
 </header>
