Add Trick list + trick images

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,7 +1,9 @@
 @import "fonts";
 @import "layouts/navbar";
 @import "layouts/header";
+@import "layouts/tricks-list";
 
 body {
   margin: 0;
+  font-family: norwester, serif;
 }
