--- a/assets/sass/layouts/tricks-list.scss
+++ b/assets/sass/layouts/tricks-list.scss
@@ -12,6 +12,10 @@
     margin-block: 0;
     margin-inline: 0;
     overflow: hidden;
+
+    @media (max-width: 1330px) {
+      height: 300px;
+    }
   }
 
   img {
