--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -5,7 +5,7 @@
                  alt=""/>
         </figure>
         <div class="trick-description">
-            <h2>Tricks 1</h2>
+            <h2>Trick 1</h2>
         </div>
     </div>
     <div class="trick-preview">
@@ -13,7 +13,7 @@
             <img src="{{ path('get_trick_image',{'groupName': 'Grabs', 'trickName': 'Indy','imageName': 'IndyGrab-646f1c86a6299.jpg'}) }}" alt=""/>
         </figure>
         <div class="trick-description">
-            <h2>Tricks 2</h2>
+            <h2>Trick 2</h2>
         </div>
     </div>
     <div class="trick-preview">
@@ -21,7 +21,7 @@
             <img src="https://picsum.photos/id/103/800/450" alt=""/>
         </figure>
         <div class="trick-description">
-            <h2>Tricks 3</h2>
+            <h2>Trick 3</h2>
         </div>
     </div>
 </section>
