--- a/assets/sass/layouts/tricks-list.scss
+++ b/assets/sass/layouts/tricks-list.scss
@@ -16,6 +16,10 @@
     @media (max-width: 1330px) {
       height: 300px;
     }
+
+    @media (max-width: 555px) {
+      height: 200px;
+    }
   }
 
   img {
