--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -1,4 +1,4 @@
-<section class="tricks-section">
+<section class="tricks-section" id="trick-section-home">
     <div class="trick-preview">
         <figure>
             <img src="{{ path('get_trick_image',{'groupName': 'Grabs', 'trickName': 'Indy','imageName': 'IndyGrab-646f1c86a6297.jpg'}) }}"
