Add Tricks images from private folder

--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -1,21 +1,15 @@
 <section class="tricks-section" id="trick-section-home">
-    <div class="trick-preview">
-        <figure>
-            <img src="{{ path('get_trick_image',{'groupName': 'Grabs', 'trickName': 'Indy','imageName': 'IndyGrab-646f1c86a6297.jpg'}) }}"
-                 alt=""/>
-        </figure>
-        <div class="trick-description">
-            <h2>Trick 1</h2>
+    {% for trick in tricks %}
+        <div class="trick-preview">
+            <figure>
+                <img src="{{ path('get_trick_image',{'groupName': trick.nom_groupe, 'trickName': trick.data.nom,'imageName': trick.nomFichier}) }}"
+                     alt=""/>
+            </figure>
+            <div class="trick-description">
+                <h2>{{ trick.data.nom }}</h2>
+            </div>
         </div>
-    </div>
-    <div class="trick-preview">
-        <figure>
-            <img src="{{ path('get_trick_image',{'groupName': 'Grabs', 'trickName': 'Indy','imageName': 'IndyGrab-646f1c86a6299.jpg'}) }}" alt=""/>
-        </figure>
-        <div class="trick-description">
-            <h2>Trick 2</h2>
-        </div>
-    </div>
+    {% endfor %}
     <div class="trick-preview">
         <figure>
             <img src="https://picsum.photos/id/103/800/450" alt=""/>
