--- a/assets/sass/layouts/tricks-list.scss
+++ b/assets/sass/layouts/tricks-list.scss
@@ -8,18 +8,10 @@
   figure {
     border-bottom: #777 solid 1px;
     width: 100%;
-    height: 225px;
     margin-block: 0;
     margin-inline: 0;
     overflow: hidden;
-
-    @media (max-width: 1330px) {
-      height: 300px;
-    }
-
-    @media (max-width: 555px) {
-      height: 200px;
-    }
+    aspect-ratio: 16/9;
   }
 
   img {
