--- a/assets/sass/sections/trick-section.scss
+++ b/assets/sass/sections/trick-section.scss
@@ -7,22 +7,23 @@
   margin: 40px 0;
 
   @media (max-width: 2185px) {
-    grid-template-columns: repeat(4, 400px);
+    grid-template-columns: repeat(5, 350px);
   }
 
-  @media (max-width: 1770px) {
-    grid-template-columns: repeat(3, 400px);
+  @media (max-width: 1880px) {
+    grid-template-columns: repeat(4, 350px);
   }
 
-  @media (max-width: 1330px) {
-    grid-template-columns: repeat(2, 500px);
+  @media (max-width: 1520px) {
+    grid-template-columns: repeat(3, 350px);
   }
 
-  @media (max-width: 1085px) {
-    grid-template-columns: 500px;
+  @media (max-width: 1140px) {
+    grid-template-columns: repeat(2, 400px);
   }
   
-  @media (max-width: 555px) {
-    grid-template-columns: 330px;
+  @media (max-width: 870px) {
+    grid-template-columns: 1fr;
+    margin: 40px 20px;
   }
 }
