Add load more function

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -2,6 +2,7 @@
 @import "layouts/navbar";
 @import "layouts/header";
 @import "layouts/tricks-list";
+@import "components/buttons";
 
 html {
   scroll-behavior: smooth;
@@ -10,4 +11,11 @@ html {
 body {
   margin: 0;
   font-family: norwester, serif;
+  color: #333;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
