--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,7 @@
             {{ encore_entry_link_tags('styles') }}
         {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+        {% block javascripts %}{% endblock %}
         <script src="https://kit.fontawesome.com/d3a0bd80a1.js" crossorigin="anonymous"></script>
     </head>
     <body>
