--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Welcome on Snowtricks !{% endblock %}
 
+{% block javascripts %}
+    {{ encore_entry_script_tags('home') }}
+{% endblock %}
+
 {% block body %}
-    {% include 'partials/tricks_list.html.twig' %}
+    {% include 'partials/tricks_list.html.twig' with {'hiddeLoadButton': false} %}
 {% endblock %}
