--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -1,15 +1,27 @@
-<section class="tricks-section" id="trick-section-home">
-    {% for trick in tricks %}
-        <div class="trick-preview">
-            <figure>
-                <img src="{{ path(
-                    'get_trick_image',
-                    {'groupName': trick.nom_groupe, 'trickName': trick.data.nom,'imageName': trick.nomFichier}
-                ) }}" alt=""/>
-            </figure>
-            <div class="trick-description">
-                <h2>{{ trick.data.nom }}</h2>
+<div id="trick-list">
+    <section class="tricks-section" id="trick-section-home">
+        {% for trick in tricks %}
+            <div class="trick-preview">
+                <figure>
+                    <img src="{{ path(
+                        'get_trick_image',
+                        {'groupName': trick.nom_groupe, 'trickName': trick.data.nom,'imageName': trick.nomFichier}
+                    ) }}" alt=""/>
+                </figure>
+                <div class="trick-description">
+                    <h2>{{ trick.data.nom }}</h2>
+                </div>
             </div>
+        {% endfor %}
+    </section>
+    {% if hiddeLoadButton is empty %}
+        <div class="center">
+            <button class="btn-arrow--black" id="btn-load-more-tricks">Load more</button>
         </div>
-    {% endfor %}
-</section>
+    {% endif %}
+    <div id="end-trick-section"></div>
+</div>
+
+
+
+
