Add specific trick header

--- a/templates/partials/trick.html.twig
+++ b/templates/partials/trick.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ trick.nom }} - détails{% endblock %}
+{% block header %}
+    {% include 'partials/header_trick.html.twig' %}
+{% endblock %}
 
+{% block content %}
+
+{% endblock %}
