--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="head-nav">
-    <img src="{{ asset('build/images/logos/Snowtricks-logo.png') }}" alt="logo">
+    <img src="{{ asset('build/images/Snowtricks-logo.png') }}" alt="logo">
     <ul class="head-list">
-        <li>Home</li>
+        <li><a href="/home">Home</a></li>
         <li>Tricks</li>
         <li>Sign in</li>
         <li>Sign up</li>
