--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,6 +6,6 @@
     {{ encore_entry_script_tags('home') }}
 {% endblock %}
 
-{% block body %}
-    {% include 'partials/tricks_list.html.twig' with {'hiddeLoadButton': false} %}
+{% block content %}
+        {% include 'partials/tricks_list.html.twig' with {'hiddeLoadButton': false} %}
 {% endblock %}
