Replace norwester font by Montserrat

--- a/assets/sass/fonts.scss
+++ b/assets/sass/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: norwester;
-  src: url("../fonts/norwester.otf");
+  font-family: Montserrat;
+  src: url("../fonts/Montserrat-Regular.ttf");
 }
 
