--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -11,8 +11,7 @@ html {
 
 body {
   margin: 0;
-  font-family: norwester, serif;
-  color: #333;
+  font-family: Montserrat, serif;
 }
 
 .center {
