--- a/assets/sass/layouts/header.scss
+++ b/assets/sass/layouts/header.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: norwester, serif;
+  font-family: Montserrat, serif;
 
   h1 {
     display: flex;
@@ -17,6 +17,7 @@
     display: block;
     width: 100%;
     text-align: center;
+    text-transform: uppercase;
   }
 
   .header-arrow {
