--- a/assets/sass/layouts/navbar.scss
+++ b/assets/sass/layouts/navbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 30px;
-  font-family: norwester, serif;
+  font-family: Montserrat, serif;
 }
 
 .head-list {
