--- a/assets/sass/sections/trick-section.scss
+++ b/assets/sass/sections/trick-section.scss
@@ -4,7 +4,7 @@
   grid-column-gap: 20px;
   grid-row-gap: 30px;
   justify-content: center;
-  margin: 40px 0;
+  margin-top: 40px;
 
   @media (max-width: 2185px) {
     grid-template-columns: repeat(5, 350px);
