Add margin on trick list button load more

--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -18,7 +18,7 @@
     </section>
     {% if hiddeLoadButton is empty %}
         <div class="center">
-            <button class="btn-arrow--black" id="btn-load-more-tricks">Load more</button>
+            <button class="btn-arrow--black btn-trick-list" id="btn-load-more-tricks">Load more</button>
         </div>
     {% endif %}
 </div>
