--- a/templates/partials/header_trick.html.twig
+++ b/templates/partials/header_trick.html.twig
@@ -1,7 +1,7 @@
 <header class="head-trick-details">
     <img src="{{ path(
         'get_trick_image',
-        {'groupName': nomGroupeTrick, 'trickName': trick.nom,'imageName': headerImage.nomFichier}
+        {'groupName': nomGroupeTrick, 'trickName': trick.nom,'imageName': headerImage.fileName}
     ) }}" alt="image {{ trick.nom }}">
     <h1>{{ trick.nom }}</h1>
 </header>
