--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Register{% endblock %}
 
-{% block body %}
+{% block header %}{% endblock %}
+
+{% block content %}
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
@@ -11,7 +13,8 @@
 
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
+    {{ form_start(registrationForm, {'attr': {'class': 'register-form'}}) }}
+        {{ form_row(registrationForm.pseudo) }}
         {{ form_row(registrationForm.mail) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
