--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Log in!{% endblock %}
 
-{% block body %}
+{% block header %}{% endblock %}
+
+{% block content %}
 <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
