Change navbar title + login view content

--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -3,7 +3,7 @@
     <ul class="head-list">
         <li><a href="/home">Home</a></li>
         <li>Tricks</li>
-        <li>Sign in</li>
-        <li>Sign up</li>
+        <li><a href="/login">Log in</a></li>
+        <li><a href="/register">Register</a></li>
     </ul>
 </nav>
