--- a/templates/partials/tricks_list.html.twig
+++ b/templates/partials/tricks_list.html.twig
@@ -14,7 +14,7 @@
                     <h2>{{ trick.data.name }}</h2>
                     {% if app.user %}
                         <div class="trick-preview-actions">
-                            <a href="/trick/modify/{{ trick.group_name }}/{{ trick.data.id }}/{{ trick.fileName }}">
+                            <a href="/trick/modify/{{ trick.data.id }}">
                                 <i class="fa-solid fa-pencil fa-lg"></i>
                             </a>
                             <i class="fa-regular fa-trash-can fa-lg"></i>
