--- a/templates/partials/trick.html.twig
+++ b/templates/partials/trick.html.twig
@@ -3,7 +3,7 @@
 {% block header %}
 {% endblock %}
 
-{% block javascripts %}
+{% block scripts_head %}
     <script src="https://www.youtube.com/iframe_api"></script>
 {% endblock %}
 
@@ -17,7 +17,7 @@
                 <img class="image-trick-details" src="{{ path(
                     'get_trick_image',
                     {'groupName': groupTrickName, 'trickName': trick.name,'imageName': trickImage.fileName}
-                ) }}" alt="image {{ trick.description }}">
+                ) }}" alt="image {{ trick.name }}">
             {% endfor %}
         </div>
         {% endif %}
