--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Welcome on Snowtricks !{% endblock %}
 
-{% block javascripts %}
+{% block scripts_head %}
     {{ encore_entry_script_tags('home') }}
 {% endblock %}
 
