--- a/templates/partials/trick_form.html.twig
+++ b/templates/partials/trick_form.html.twig
@@ -2,8 +2,33 @@
 
 {% block header %}{% endblock %}
 
+{% block scripts_head %}
+{% endblock %}
+
 {% block content %}
     <div class="trick-container">
         {% include 'partials/header_trick.html.twig' with {headerImage: headerImage.fileName} %}
+        {{ form_start(trickForm, {'attr': {'class': 'register-form'}}) }}
+        <h2>Images</h2>
+        <div class="medias-container">
+            {% for image in trickForm.imagesTricks %}
+                <div class="trick-image-item">
+                    <div class="trick-image-preview">
+                        <img class="image-trick-details" src="{{ path(
+                            'get_trick_image',
+                            {'groupName': groupTrickName, 'trickName': trick.name,'imageName': image.vars.value.fileName}
+                        ) }}" alt="image {{ trick.name }}">
+                    </div>
+                    {{ form_widget(image.fileName) }}
+                    {{ form_widget(image.file) }}
+                </div>
+            {% endfor %}
+        </div>
+        <h2>Videos</h2>
+        {{ form_end(trickForm) }}
     </div>
+{% endblock %}
+
+{% block scripts_end_body %}
+    {{ encore_entry_script_tags('trick') }}
 {% endblock %}
