--- a/assets/sass/components/icons.scss
+++ b/assets/sass/components/icons.scss
@@ -7,10 +7,22 @@
 .icon-add-image {
   cursor: pointer;
   font-size: 2em;
-  color: #65B5CD;
-  transition: color 300ms ease-in-out;
+  color: $steel-blue;
+  transition: color 250ms ease-in-out;
 
   &:hover {
-    color: #367a93;
+    color: $azurin-blue;
+  }
+}
+
+.icon-delete-image {
+  cursor: pointer;
+  font-size: 1.5em;
+  color: #C22B3EFF;
+  transition: all 250ms ease-in-out;
+
+  &:hover {
+    color: #981f30;
+    scale: 1.1;
   }
 }
