--- a/assets/sass/layouts/forms.scss
+++ b/assets/sass/layouts/forms.scss
@@ -17,3 +17,34 @@
   }
 }
 
+.trick-form {
+  &-file {
+    font-family: Montserrat, serif;
+  }
+
+  &-file::file-selector-button {
+    font-family: Montserrat, serif;
+    background: none;
+    border: $steel-blue 2px solid;
+    color: $steel-blue;
+    line-height: 0.7;
+    margin: 0.5em;
+    padding: 1em 2em;
+    transition: 0.25s ease-in-out;
+  }
+
+  &-file::file-selector-button:hover {
+    cursor: pointer;
+    color: #FFF;
+    box-shadow: inset 13em 0 0 0 $steel-blue;
+  }
+}
+
+.image-file-actions {
+  margin-top: 8px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
