Rename icon css class names

--- a/assets/sass/components/icons.scss
+++ b/assets/sass/components/icons.scss
@@ -4,7 +4,7 @@
   align-self: center;
 }
 
-.icon-add-image {
+.icon-add-img {
   cursor: pointer;
   font-size: 2em;
   color: $steel-blue;
@@ -15,7 +15,7 @@
   }
 }
 
-.icon-delete-image {
+.icon-delete-img {
   cursor: pointer;
   font-size: 1.5em;
   color: #C22B3EFF;
