--- a/assets/sass/components/buttons.scss
+++ b/assets/sass/components/buttons.scss
@@ -1,7 +1,7 @@
 .btn-arrow--black {
   min-width: 130px;
   height: 40px;
-  color: #000;
+  color: #FFF;
   padding: 5px 10px;
   font-weight: bold;
   cursor: pointer;
@@ -10,13 +10,12 @@
   display: inline-block;
   outline: none;
   overflow: hidden;
-  border-radius: 5px;
+  border-radius: 4px;
   border: none;
-  background-color: #ffa500d6;
+  background-color: $steel-blue;
   margin-bottom: 40px;
   
   &:hover{
-    border-radius: 5px;
     padding-right: 24px;
     padding-left:8px;
   }
@@ -32,7 +31,7 @@
     opacity: 0;
     font-size: 20px;
     line-height: 40px;
-    top: 0;
+    top: -2px;
     right: -20px;
     transition: 0.4s;
   }
